--- a/scss/about-us-page.scss
+++ b/scss/about-us-page.scss
@@ -236,6 +236,7 @@
     margin-bottom: 15px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 
     @media screen and (max-width: 768px) {
       align-items: start;
@@ -513,103 +514,83 @@
     }
   }
 
-  &-card {
-    margin-top: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  .slide-content {
+    width: 90%;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 10px;
+    margin-bottom: 30px;
 
-    @media screen and (max-width: 1100px) {
-      margin-top: 30px;
-    }
-
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
-      margin-top: 10px;
-    }
-  }
-
-  .card {
-    width: 32%;
-    margin-top: 30px;
-    padding: 30px 30px 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
-
-    @media screen and (max-width: 768px) {
-      width: 80%;
-    }
-
-    @media screen and (max-width: 500px) {
-      width: 95%;
-    }
-
-    &-name {
-      font-family: "Montserrat" sans-serif;
-      font-size: 16px;
-      font-weight: 700;
-      margin-top: 20px;
-    }
-
-    &-line {
-      margin-top: 15px;
-      margin-bottom: 15px;
-      display: block;
-      width: 70%;
-      height: 1px;
-      background: rgba(0, 0, 0, 0.1);
-    }
-
-    &-text {
-      width: 85%;
-      margin-top: 50px;
-      text-align: center;
-      font-family: "Montserrat" sans-serif;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 22px;
-    }
-  }
-
-  .place-for-pagination {
-    margin-top: 100px;
-    display: flex;
-    align-items: center;
-    color: #000000;
-    cursor: pointer;
-
-    @media screen and (max-width: 1100px) {
-      margin-top: 50px;
-    }
-
-    svg path {
-      stroke: #000000;
-    }
-
-    p {
-      padding: 10px;
+    .card-wrapper {
       display: flex;
       align-items: center;
-      font-size: 24px;
-      font-weight: 500;
-    }
+      justify-content: space-between;
+      padding: 20px 0;
 
-    .line {
-      display: block;
-      width: 300px;
-      height: 2px;
-      background: #000000;
-      margin-left: 15px;
-      margin-right: 15px;
+      @media screen and (max-width: 1100px) {
+        margin-top: 30px;
+      }
 
-      @media screen and (max-width: 500px) {
-        width: 100px;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        margin-top: 10px;
+      }
+
+      .card {
+        width: 32%;
+        padding: 30px 30px 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        background: #fff;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+        @media screen and (max-width: 768px) {
+          width: 80%;
+        }
+
+        @media screen and (max-width: 500px) {
+          width: 95%;
+        }
+
+        &-name {
+          font-family: "Montserrat" sans-serif;
+          font-size: 16px;
+          font-weight: 700;
+          margin-top: 20px;
+        }
+
+        &-line {
+          margin-top: 15px;
+          margin-bottom: 15px;
+          display: block;
+          width: 70%;
+          height: 1px;
+          background: rgba(0, 0, 0, 0.1);
+        }
+
+        &-text {
+          width: 85%;
+          margin-top: 50px;
+          text-align: center;
+          font-family: "Montserrat" sans-serif;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 22px;
+        }
       }
     }
+  }
+
+  .swiper-button-lock {
+    display: block;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev{
+    font-weight: bold;
   }
 }
