--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -657,22 +657,30 @@
     margin-top: 100px;
     width: 100%;
     padding-bottom: 70px;
+    display: flex;
+    align-items: center;
 
     @media screen and (max-width: 768px) {
       margin-top: 50px;
     }
 
-    &-wrapper {
+    .slide-content {
       padding: 0 45px;
 
+      .card-wrapper {
+        display: flex;
+        overflow: hidden;
+      }
+
       .swiper-slide {
+        width: 25%;
         img {
           width: 75%;
         }
       }
     }
 
-    .swiper-horizontal>.swiper-pagination-bullets,
+    .swiper-horizontal > .swiper-pagination-bullets,
     .swiper-pagination-bullets.swiper-pagination-horizontal,
     .swiper-pagination-custom,
     .swiper-pagination-fraction {
@@ -681,22 +689,22 @@
 
     &-button-prev,
     &-button-next {
-      color: #000000;
+      color: #007aff;
     }
   }
 
-  .my-slider-progress {
-    margin-top: 50px;
-    background: #0000001a;
-    width: 30%;
-  }
+  // .my-slider-progress {
+  //   margin-top: 50px;
+  //   background: #0000001a;
+  //   width: 30%;
+  // }
 
-  .my-slider-progress-bar {
-    background: #000000;
-    height: 4px;
-    transition: width 400ms ease;
-    width: 20%;
-  }
+  // .my-slider-progress-bar {
+  //   background: #000000;
+  //   height: 4px;
+  //   transition: width 400ms ease;
+  //   width: 20%;
+  // }
 }
 
 .request-wrapper {
